--- a/src/pages/care-plan/su-medication.html
+++ b/src/pages/care-plan/su-medication.html
@@ -190,6 +190,18 @@
         float:left;
       }
 
+      .rowArchived {
+        background-color: rgba(191, 63, 63, 0.49) !important;
+      }
+
+      .rowNewest {
+        background-color: rgba(63, 191, 63, 0.49) !important;
+      }
+
+      .rowInterim {
+        background-color: rgba(191, 191, 63, 0.49) !important;
+      }
+
     </style>
 
     <paper-dialog
@@ -327,6 +339,42 @@
 
     </paper-dialog>
 
+    <paper-dialog id="medPointModal">
+      <h2>Entry as of [[_computeTimeOfChange(newMedHistory.log.time)]]</h2>
+      <h3>Change Details</h3>
+      <p>
+        Changed by [[_computeUserDisplay(newMedHistory.log, usersData)]] on [[_computeTimeOfChange(newMedHistory.log.time)]]
+      </p>
+
+      <h3>Medication Details</h3>
+      <p>
+        [[newMedHistory.medicine]]
+        <br />
+        [[newMedHistory.method]]
+        <br />
+        [[newMedHistory.dosage]]
+        <br />
+        [[newMedHistory.comments]]
+      </p>
+
+      <p>
+        Times of Day to Take:
+        <template is="dom-repeat" items="[[newMedHistory.timeChunk]]" as="chunk">
+          <br />
+          [[chunk]]
+        </template>
+      </p>
+
+      <p>
+        Weekdays to Take:
+        <template is="dom-repeat" items="[[newMedHistory.weekdays]]" as="day">
+          <br />
+          [[day]]
+        </template>
+      </p>
+
+    </paper-dialog>
+
     <paper-card class="pageCard">
       <su-header
       page="Medication Outline"
@@ -372,28 +420,31 @@
                   <th>
                     Dosage
                   </th>
-                  <th>
+                  <th hidden$="[[userSettingsData.vcActive]]">
                     Comment
                   </th>
-                  <th hidden$="{{settingsData.vcActive}}">
-                    Edit {{settingsData.vcActive}}
+                  <th hidden$="[[userSettingsData.vcActive]]">
+                    Edit
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     Time
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     User
+                  </th>
+                  <th hidden$="[[!userSettingsData.vcActive]]">
+                    More
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <template
                   is="dom-repeat"
-                  items="{{_computeMedList(medsData, settingsData.vcActive)}}"
+                  items="{{_computeMedList(medsData, userSettingsData.vcActive)}}"
                   as="med"
-                  filter="_filterNight"
+                  filter="_filterMorning"
                   observe="timeChunk">
-                  <tr>
+                  <tr class$="[[_computeRowClass(med, userSettingsData.vcActive)]]">
                     <td>
                       [[med.medicine]]
                     </td>
@@ -403,7 +454,7 @@
                     <td>
                       [[med.dosage]]
                     </td>
-                    <td>
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <span hidden="[[!med.comment]]">
                         <paper-icon-button
                           class="commentButton"
@@ -412,14 +463,17 @@
                         </paper-icon-button>
                       </span>
                     </td>
-                    <td hidden$="{{settingsData.vcActive}}">
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <paper-icon-button on-tap="editMed" icon="editor:editor:mode-edit"></paper-icon-button>
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeTimeOfChange(med.log.time)]]
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeUserDisplay(med.log, usersData)]]
+                    </td>
+                    <td hidden$="[[!userSettingsData.vcActive]]">
+                      <paper-icon-button on-tap="viewChanges" icon="icons:folder-open"></paper-icon-button>
                     </td>
                   </tr>
 
@@ -461,28 +515,31 @@
                   <th>
                     Dosage
                   </th>
-                  <th>
+                  <th hidden$="[[userSettingsData.vcActive]]">
                     Comment
                   </th>
-                  <th hidden$="{{settingsData.vcActive}}">
-                    Edit {{settingsData.vcActive}}
+                  <th hidden$="[[userSettingsData.vcActive]]">
+                    Edit
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     Time
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     User
+                  </th>
+                  <th hidden$="[[!userSettingsData.vcActive]]">
+                    More
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <template
                   is="dom-repeat"
-                  items="{{_computeMedList(medsData, settingsData.vcActive)}}"
+                  items="{{_computeMedList(medsData, userSettingsData.vcActive)}}"
                   as="med"
-                  filter="_filterNight"
+                  filter="_filterAfternoon"
                   observe="timeChunk">
-                  <tr>
+                  <tr class$="[[_computeRowClass(med, userSettingsData.vcActive)]]">
                     <td>
                       [[med.medicine]]
                     </td>
@@ -492,7 +549,7 @@
                     <td>
                       [[med.dosage]]
                     </td>
-                    <td>
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <span hidden="[[!med.comment]]">
                         <paper-icon-button
                           class="commentButton"
@@ -501,14 +558,17 @@
                         </paper-icon-button>
                       </span>
                     </td>
-                    <td hidden$="{{settingsData.vcActive}}">
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <paper-icon-button on-tap="editMed" icon="editor:editor:mode-edit"></paper-icon-button>
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeTimeOfChange(med.log.time)]]
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeUserDisplay(med.log, usersData)]]
+                    </td>
+                    <td hidden$="[[!userSettingsData.vcActive]]">
+                      <paper-icon-button on-tap="viewChanges" icon="icons:folder-open"></paper-icon-button>
                     </td>
                   </tr>
 
@@ -550,28 +610,31 @@
                   <th>
                     Dosage
                   </th>
-                  <th>
+                  <th hidden$="[[userSettingsData.vcActive]]">
                     Comment
                   </th>
-                  <th hidden$="{{settingsData.vcActive}}">
-                    Edit {{settingsData.vcActive}}
+                  <th hidden$="[[userSettingsData.vcActive]]">
+                    Edit
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     Time
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     User
+                  </th>
+                  <th hidden$="[[!userSettingsData.vcActive]]">
+                    More
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <template
                   is="dom-repeat"
-                  items="{{_computeMedList(medsData, settingsData.vcActive)}}"
+                  items="{{_computeMedList(medsData, userSettingsData.vcActive)}}"
                   as="med"
-                  filter="_filterNight"
+                  filter="_filterEvening"
                   observe="timeChunk">
-                  <tr>
+                  <tr class$="[[_computeRowClass(med, userSettingsData.vcActive)]]">
                     <td>
                       [[med.medicine]]
                     </td>
@@ -581,7 +644,7 @@
                     <td>
                       [[med.dosage]]
                     </td>
-                    <td>
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <span hidden="[[!med.comment]]">
                         <paper-icon-button
                           class="commentButton"
@@ -590,14 +653,17 @@
                         </paper-icon-button>
                       </span>
                     </td>
-                    <td hidden$="{{settingsData.vcActive}}">
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <paper-icon-button on-tap="editMed" icon="editor:editor:mode-edit"></paper-icon-button>
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeTimeOfChange(med.log.time)]]
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeUserDisplay(med.log, usersData)]]
+                    </td>
+                    <td hidden$="[[!userSettingsData.vcActive]]">
+                      <paper-icon-button on-tap="viewChanges" icon="icons:folder-open"></paper-icon-button>
                     </td>
                   </tr>
 
@@ -639,28 +705,31 @@
                   <th>
                     Dosage
                   </th>
-                  <th>
+                  <th hidden$="[[userSettingsData.vcActive]]">
                     Comment
                   </th>
-                  <th hidden$="{{settingsData.vcActive}}">
-                    Edit {{settingsData.vcActive}}
+                  <th hidden$="[[userSettingsData.vcActive]]">
+                    Edit
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     Time
                   </th>
-                  <th hidden$="{{!settingsData.vcActive}}">
+                  <th hidden$="[[!userSettingsData.vcActive]]">
                     User
+                  </th>
+                  <th hidden$="[[!userSettingsData.vcActive]]">
+                    More
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <template
                   is="dom-repeat"
-                  items="{{_computeMedList(medsData, settingsData.vcActive)}}"
+                  items="{{_computeMedList(medsData, userSettingsData.vcActive)}}"
                   as="med"
                   filter="_filterNight"
                   observe="timeChunk">
-                  <tr>
+                  <tr class$="[[_computeRowClass(med, userSettingsData.vcActive)]]">
                     <td>
                       [[med.medicine]]
                     </td>
@@ -670,7 +739,7 @@
                     <td>
                       [[med.dosage]]
                     </td>
-                    <td>
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <span hidden="[[!med.comment]]">
                         <paper-icon-button
                           class="commentButton"
@@ -679,14 +748,17 @@
                         </paper-icon-button>
                       </span>
                     </td>
-                    <td hidden$="{{settingsData.vcActive}}">
+                    <td hidden$="[[userSettingsData.vcActive]]">
                       <paper-icon-button on-tap="editMed" icon="editor:editor:mode-edit"></paper-icon-button>
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeTimeOfChange(med.log.time)]]
                     </td>
-                    <td hidden$="{{!settingsData.vcActive}}">
+                    <td hidden$="[[!userSettingsData.vcActive]]">
                       [[_computeUserDisplay(med.log, usersData)]]
+                    </td>
+                    <td hidden$="[[!userSettingsData.vcActive]]">
+                      <paper-icon-button on-tap="viewChanges" icon="icons:folder-open"></paper-icon-button>
                     </td>
                   </tr>
 
@@ -739,8 +811,16 @@
           type: Object
         },
 
+        usersData: {
+          type: Object
+        },
+
         timesData: {
           type: Object
+        },
+
+        newTime: {
+
         },
 
         medsData: {
@@ -772,6 +852,11 @@
           }
         },
 
+        newMedHistory: {
+          type: Object,
+          value:{}
+        },
+
         timeTarget: {
           type: Object
         },
@@ -786,8 +871,11 @@
           }
         },
 
-        settingsData: {
-          type: Object
+        userSettingsData: {
+          type: Object,
+          value: {
+            vcActive: false
+          }
         }
 
       },
@@ -831,6 +919,11 @@
         } else {
           this.fire("openToast",{toastText: "Please make sure that you have set a name and a time of day (morning, afternoon etc) for this new medication."});
         };
+      },
+
+      viewChanges: function(e) {
+        this.newMedHistory = e.model.med;
+        this.$.medPointModal.toggle();
       },
 
       editMed: function(e) {
@@ -905,7 +998,7 @@
       },
 
       _filterMorning: function(item) {
-        if(item.archived) {
+        if(item.archived && !this.userSettingsData.vcActive) {
           return false;
         } else {
           return item.timeChunk.indexOf("morning") != -1;
@@ -913,7 +1006,7 @@
       },
 
       _filterAfternoon: function(item) {
-        if(item.archived) {
+        if(item.archived && !this.userSettingsData.vcActive) {
           return false;
         } else {
           return item.timeChunk.indexOf("afternoon") != -1;
@@ -921,7 +1014,7 @@
       },
 
       _filterEvening: function(item) {
-        if(item.archived) {
+        if(item.archived && !this.userSettingsData.vcActive) {
           return false;
         } else {
           return item.timeChunk.indexOf("evening") != -1;
@@ -929,7 +1022,7 @@
       },
 
       _filterNight: function(item) {
-        if(item.archived){
+        if(item.archived && !this.userSettingsData.vcActive){
           return false;
         } else {
           return item.timeChunk.indexOf("night") != -1;
@@ -965,6 +1058,57 @@
         return currentMedList;
       },
 
+      getMedHistory: function(meds) {
+        //return the most recent sub doc from medication docs
+        var medListHistory = [];
+        var now = Date.now();
+        for(x in meds) {
+          var medHistory = meds[x];
+          var medCandidate = null;
+          var newestKey;
+
+          for(y in medHistory) {
+            var med = medHistory[y];
+            if(med.log) {
+              var medTime = med.log.time;
+              if(medCandidate === null) {
+                medCandidate = med;
+                newestKey = y;
+              } else if(medCandidate.log.time < medTime) {
+                  medCandidate = med;
+                  newestKey = y;
+                };
+            };
+          };
+
+          for(y in medHistory) {
+            var med = medHistory[y]["med"];
+            med.log = medHistory[y]["log"];
+            med.$key = y;
+            medListHistory.push(med);
+            if(y === newestKey) {
+              med.newest = true;
+            };
+          };
+        };
+        return medListHistory;
+      },
+
+      _computeRowClass: function(med, vcActive) {
+        if(vcActive){
+          if(med.archived) {
+            return 'rowArchived';
+          } else if(med.newest) {
+            return 'rowNewest';
+          } else {
+            return 'rowInterim';
+          };
+        } else {
+          return '';
+        };
+
+      },
+
       _computeTimeOfChange: function(time) {
         var date = new Date(time);
         return date.toString();
@@ -979,22 +1123,12 @@
         };
       },
 
-      getMedHistory: function(meds) {
-        var medHistory = [];
-        for(x in meds) {
-          for(y in meds[x]) {
-            var med = meds[x][y]["med"];
-            med.log = meds[x][y]["log"];
-            medHistory.push(med);
-          };
-        };
-        return medHistory;
-      },
-
       _computeMedList: function(meds, vcActive) {
         if(!vcActive) {
+          console.log("current");
           return this.getCurrentMeds(meds);
         } else {
+          console.log("history");
           return this.getMedHistory(meds);
         };
       },
